# tinyml-wine-classifier

./: .gitignore  CMakeLists.txt  main.c  model_data.h  tflm_wrapper.cpp  tflm_wrapper.h  wine_dataset.h  wine_params.h
